--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -2,6 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>es.uvigo.esei.xcs.composite</groupId>
+		<artifactId>maven-multi-module</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+
 	<groupId>es.uvigo.esei.xcs.composite</groupId>
 	<artifactId>domain</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -17,7 +23,6 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
