--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,9 @@
     <packaging>pom</packaging>
 
 	<properties>
-	    <maven.compiler.target>1.8</maven.compiler.target>
-	    <maven.compiler.source>1.8</maven.compiler.source>
+	    <maven.compiler.target>8</maven.compiler.target>
+	    <maven.compiler.source>8</maven.compiler.source>
+	     <cobertura.version>2.7</cobertura.version>
 	</properties>
 
     <name>Composite Sample - Maven-Multi-Module</name>
@@ -72,5 +73,22 @@
             </plugins>
         </pluginManagement>
     </build>
+            
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>${cobertura.version}</version>
+                <configuration>
+                    <formats>
+                       <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>        
+
 
 </project>
